--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "private": true,
   "scripts": {
     "ts:w": "tsc -w -p ./src_boot/tsconfig.json",
+    "ts:src:w": "tsc -w -p ./src/tsconfig.json",
     "webpack:w": "webpack -w -c ./webpack.config.js",
     "======================": "",
     "build:ts": "tsc -p ./src_boot/tsconfig.json",
+    "build:src:ts": "tsc -p ./src/tsconfig.json",
     "build:webpack": "webpack -c ./webpack.config.js"
   },
   "packageManager": "yarn@3.4.1",
