--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "packageManager": "yarn@3.4.1",
   "dependencies": {
+    "@sweetalert2/themes": "^5.0.15",
     "json5": "^2.2.3",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
